# ironclaude

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  WINDOWS_SETUP.md
commander/: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
commander/config/: ironclaude.json
commander/docs/plans/: 2026-06-30-v1014-adversarial-round4-report.md  2026-07-01-adversarial-fixes.md  (+8 more)
commander/hooks/: brain-hooks.json  brain-orchestrator-guard.sh  brain-permission-seeker-guard.sh  brain-stop-hook.sh  memory-search-enforcer.sh  startup-lookback-enforcer.sh  wiki-synthesis-enforcer.sh
commander/tests/: conftest.py  test_advisor_fallback_directive.py  test_auth_relay.py  test_boy_scout_directive.py  test_brain_client.py  test_brain_monitor.py  test_cli.py  test_config.py  test_daemon.py  test_db.py  test_directives.py  test_enforcement.py  test_executing_plans_skill.py  test_fable_availability.py  test_game_tools.py  test_get_system_memory.py  test_grader.py  test_idle_enforcement.py  test_kill_orphan_workers.py  test_kill_worker_log_cap.py  test_lifecycle_logging.py  test_local_grader.py  test_main_operator_wait.py  test_main_validate.py  test_notifications.py  test_ollama_circuit_breaker.py  test_ollama_client.py  test_ollama_inventory.py  test_ollama_mcp.py  test_orchestrator_debug_log.py  test_orchestrator_mcp.py  test_orphan_remediation.py  test_plugins.py  test_protocol.py  test_push.py  test_research_mcp.py  test_shadow_grader.py  test_signal_forensics.py  test_signal_handler.py  test_signal_handler_destructive.py  (+14 more)
(+297 files in other folders)
