# pyproject.toml
[project]
name = "ironclaude-commander"
version = "1.0.4"
description = "AI orchestrator that manages Claude Code workers via Slack"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.30.0",
    "slack-bolt>=1.18.0",
    "claude-agent-sdk>=0.1.0",
    "mcp>=1.0.0",
    "duckduckgo_search>=7.0.0",
    "markdownify>=0.14.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "destructive: sends real signals; must not run alongside the live daemon",
]
